<resources>
    <string name="app_name">SystemInfoWidget</string>
    <string name="menu_settings">Settings</string>
    <string name="image_content_description">imagedisc</string>
<!-- General-View -->
    <string name="general_manufacturer">Manufacturer</string>
    <string name="general_model">Model</string>
    <string name="general_product">Product</string>
    <string name="general_brand">Brand</string>
    <string name="general_serialnumber">Serial Number</string>
    <string name="general_device_id">Build Number</string>
    <string name="general_timezone">Time Zone</string>
    <string name="general_unknow">Unknow</string>
<!-- More-View -->
    <string name="more_os_sdk_codename">OS Name</string>
    <string name="more_os_sdk_version">OS/SDK Version</string>
    <string name="more_board">Board</string>
    <string name="more_bootloader">Bootloader</string>
    <string name="more_cpu_i">CPU-ABI I</string>
    <string name="more_used_ram">RAM in use</string>
    <string name="more_hardware">Hardware</string>
<!-- Display-View -->
    <string name="display_height">Height</string>
    <string name="display_width">Width</string>
    <string name="display_dps">Density (DPI)</string>
    <string name="display_dps_ldpi">LDPI (120)</string>
    <string name="display_dps_mdpi">MDPI (160)</string>
    <string name="display_dps_hdpi">HDPI (240)</string>
    <string name="display_dps_xhdpi">XHDPI (320)</string>
    <string name="display_dps_xxhdpi">XXHDPI (480)</string>
    <string name="display_dps_tv">TV (213)</string>
    <string name="display_dps_default">Default (160)</string>
    <string name="display_fps">Refresh Rate (FPS)</string>
    <string name="display_display_scale">Display Scaling</string>
    <string name="display_display_size">Display Size</string>
    <string name="display_display_size_summary">inches</string>
    <string name="display_orientation">Natural Orientation</string>
    <string name="display_orientation_landscape">Landscape</string>
    <string name="display_orientation_portrait">Portrait</string>
<!-- Camera-View -->
    <string name="camera_manufacturer">Picture Format</string>
    <string name="camera_model">Preview Format</string>
    <string name="camera_product">Picture Size</string>
    <string name="camera_brand">Preview Size</string>
    <string name="camera_serialnumber">Supported Picture Size</string>
    <string name="camera_supported_formats">Supported Picture Format</string>
    <string name="camera_front_camera">Front Camera</string>
    <string name="camera_face_cam_available">Available</string>
    <string name="camera_face_cam_not_available">Not Available</string>
    <string name="camera_picture_format_jpeg" translatable="false">JPEG</string>
    <string name="camera_picture_format_nv" translatable="false">NV16</string>
    <string name="camera_picture_format_nv_second" translatable="false">NV21</string>
    <string name="camera_picture_format_rgb" translatable="false">RGB_565</string>
    <string name="camera_picture_format_yuy" translatable="false">YUY2</string>
    <string name="camera_picture_format_yv" translatable="false">YV12</string>
    <string name="camera_picture_format_yuv" translatable="false">YUV 420</string>
    <string name="camera_picture_format_private" translatable="false">Opaque</string>
<!-- Memory-View -->
    <string name="memory_header_memory">Storage-Medium</string>
    <string name="memory_header_values">Total/Free/Used</string>
    <string name="memory_device_memory">Device Storage</string>
    <string name="memory_usb_sd_memory">USB/SD-Storage</string>
    <string name="memory_used">Used:</string>
    <string name="memory_not_available">Not Available</string>
<!-- Battery-View -->
    <string name="battery_capacitance">Capacitance</string>
    <string name="battery_state">State</string>
    <string name="battery_state_charging">Charging</string>
    <string name="battery_state_dis_charging">Discharging</string>
    <string name="battery_state_full">Full</string>
    <string name="battery_state_not_charging">Not Charging</string>
    <string name="battery_technology">Technology</string>
    <string name="battery_voltage">Voltage</string>
    <string name="battery_temp">Temperature</string>
    <string name="battery_battery_health">Battery Health</string>
    <string name="battery_health_cold">Cold</string>
    <string name="battery_health_dead">Death</string>
    <string name="battery_health_good">Good</string>
    <string name="battery_health_overheat">Overheat</string>
    <string name="battery_health_over_voltage">Over Voltage</string>
    <string name="battery_health_unspecified_failure">Unspecified Failure</string>
    <string name="battery_connected">Connected</string>
    <string name="battery_connected_usb">USB</string>
    <string name="battery_connected_battery">Battery</string>
    <string name="battery_connected_ac">AC</string>
    <string name="battery_technology_summary">Li-ion</string>
<!-- Network-View -->
    <string name="network_mobile">Mobile Data</string>
    <string name="network_mobile_state">State</string>
    <string name="network_mobile_connection_type">Connection Type</string>
    <string name="network_wlan">W-Lan</string>
    <string name="network_wlan_name">Network name</string>
    <string name="network_wlan_state">State</string>
    <string name="network_wlan_signal_strength">Signal strength</string>
    <string name="network_wlan_connection_state_connected">Connected</string>
    <string name="network_wlan_connection_state_disconnected">Disconnected</string>
    <string name="network_wlan_connection_type_gprs">GPRS</string>
    <string name="network_wlan_connection_type_edge">EDGE</string>
    <string name="network_wlan_connection_type_2g">2G</string>
    <string name="network_wlan_connection_type_3g">3G</string>
    <string name="network_wlan_connection_type_lte">LTE</string>
    <string name="network_wlan_connection_strength_weak">Weak</string>
    <string name="network_wlan_connection_strength_fair">Fair</string>
    <string name="network_wlan_connection_strength_good">Good</string>
    <string name="network_wlan_connection_strength_excellent">Excellent</string>
<!-- Config-View -->
    <string name="config_general_app_config">APP-SETTINGS</string>
    <string name="config_temp_title">Temperature</string>
    <string name="config_temp_summary">Temperature Display</string>
    <string name="config_temp_celsius_default">celsius</string>
    <string name="config_color_style">Color-Schema</string>
    <string name="config_color_style_summary">Color-Schema Choice</string>
    <string name="config_color_style_default">color_blue</string>
    <string name="config_about_title">ABOUT</string>
    <string name="config_entries_about">Current SystemInfo Widget-Version</string>
    <string name="config_entries_about_app_summary">Version: %s</string>
    <string name="config_entries_about_app_summary_fail">Version: Not Available</string>
    <string name="config_general_rate">Rate SystemInfo Widget</string>
    <string name="config_general_rate_summary">Rate us at the store</string>
    <string name="config_general_friend">Recommend</string>
    <string name="config_general_friend_summary">Recommend us</string>
    <string name="config_general_send_feedback">Send Feedback</string>
    <string name="config_general_send_feedback_summary">Give us Feedback</string>
    <string name="config_general_more_apps">Google Play</string>
    <string name="config_general_more_apps_summary">More Apps</string>
    <string name="config_entries_rights_title">LEGAL NOTICES</string>
    <string name="config_entries_rights_legal_title">Bequest</string>
    <string name="config_entries_rights_legal_privat" translatable="false" formatted="false">Legal Notices:\n© 2013&#8211;%d Emanuel Zienecker. All rights reserved.\n\nExternal libraries used:\nAndroid-RateThisApp Licensed under the Apache License, Version 2.0 (the "License")\nCopyright 2013-2017 Keisuke Kobayashi\nAll rights reserved.</string>
    <string name="config_config_click">\"Click\" for Settings-Menu</string>
    <string name="config_save_changes">Update Widget</string>
    <string name="config_category_title">Category</string>
    <string name="config_category_summary">Category Choice</string>
    <string name="config_category_choice_wrong">Choose exactly six entries</string>
    <string name="settings_key_sys_version" translatable="false">bow_version_setting</string>
    <string name="settings_key_rate_bow" translatable="false">rate_bow_setting</string>
    <string name="settings_key_forward" translatable="false">forward_setting</string>
    <string name="settings_key_feedback" translatable="false">feedback_setting</string>
    <string name="settings_key_rights" translatable="false">rights_setting</string>
    <string name="settings_key_market" translatable="false">market_setting</string>
<!-- Feedback-View -->
	<string name="feedback_app_version">SystemInfo Version:</string>
	<string name="feedback_os_version">Android Version:</string>
	<string name="feedback_device_name">Device name:</string>
	<string name="feedback_problem_disc">Problem description:</string>
	<string name="feedback_mail_subject">Contact Developer</string>
<!-- Support-View -->
	<string name="support_subject">Take a look at the SystemInfo Widget</string>
	<string name="support_text">Hey, try the SystemInfo-Widget:</string>
<!-- Rate-Dialog -->
	<string name="rate_dialog_remind_later">Remind me later</string>
	<string name="rate_dialog_no_thanks">No, Thanks</string>
	<string name="rate_dialog_text">If you enjoy using SystemInfoWidget, please take a moment to rate it. Thanks for your support!</string>
    <string name="rate_dialog_ok">Rate Now</string>
    <string name="config_entries_privacy_policy">Privacy Policy</string>
    <string name="no_internet_title">No Internet</string>
    <string name="no_internet_message">There is no internet connection</string>
    <string name="asset_statements" translatable="false">[{\n  \"relation\": [\"delegate_permission/common.handle_all_urls\"],\n  \"target\": {\n    \"namespace\": \"web\",\n    \"site\": \"http://systeminfowidget.manuzid.de\",\n  }\n}]</string>
    <string name="config_general_more_apps_amazon" translatable="false">Amazon Appstore</string>
</resources>