<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android" >
    <PreferenceCategory android:title="@string/config_general_app_config" >
        <MultiSelectListPreference
            android:key="manuzid-category-selection"
            android:title="@string/config_category_title"
            android:summary="@string/config_category_summary" />
        <ListPreference
            android:key="color_scheme"
            android:title="@string/config_color_style"
            android:defaultValue="@string/config_color_style_default"
            android:entries="@array/config_color_style"
            android:entryValues="@array/config_color_style_keys"
            android:summary="@string/config_color_style_summary" />
        <ListPreference
            android:key="temp_format"
            android:title="@string/config_temp_title"
            android:summary="@string/config_temp_summary"
            android:defaultValue="@string/config_temp_celsius_default"
            android:entries="@array/config_temperature_style"
            android:entryValues="@array/config_temperature_style_keys" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_about_title" >
        <Preference
            android:key="@string/settings_key_sys_version"
            android:title="@string/config_entries_about" />
        <Preference
            android:key="@string/settings_key_rate_bow"
            android:summary="@string/config_general_rate_summary"
            android:title="@string/config_general_rate" />
        <Preference
            android:key="@string/settings_key_forward"
            android:summary="@string/config_general_friend_summary"
            android:title="@string/config_general_friend" />
        <Preference
            android:key="@string/settings_key_feedback"
            android:summary="@string/config_general_send_feedback_summary"
            android:title="@string/config_general_send_feedback" />
        <Preference
            android:key="@string/settings_key_market"
            android:summary="@string/config_general_more_apps_summary"
            android:title="@string/config_general_more_apps" />
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/config_entries_rights_title" >
        <Preference
            android:key="@string/settings_key_rights"
            android:title="@string/config_entries_rights_legal_title" />
        <Preference
            android:key="privacy_policy_settings"
            android:title="@string/config_entries_privacy_policy" />
    </PreferenceCategory>

</PreferenceScreen>