<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/sys_info_relative_widget"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical" >

    <LinearLayout
        android:id="@+id/sys_info_linear_widget"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:weightSum="6.0" >

        <Button
            android:id="@+id/btnFirst"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />

        <Button
            android:id="@+id/btnSecond"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />

        <Button
            android:id="@+id/btnThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />

        <Button
            android:id="@+id/btnFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />

        <Button
            android:id="@+id/btnFifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />

        <Button
            android:id="@+id/btnSixth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1.0"
            style="?android:attr/borderlessButtonStyle"
            android:background="@drawable/general_btn" />
    </LinearLayout>

    <RelativeLayout
        android:id="@+id/relative_general"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@drawable/relative_background_blue"
        android:visibility="visible" >

        <TextView
            android:id="@+id/lblFirstInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="3dp"
            android:text="@string/general_manufacturer"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtFirstInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblSecondInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblFirstInfo"
            android:layout_marginStart="3dp"
            android:text="@string/general_model"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtSecondInfo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtFirstInfo"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/device_memory_progress_bar"
            style="@style/CustomProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtSecondInfo"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/device_memory_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/device_memory_progress_bar"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblSecondInfo"
            android:layout_marginStart="3dp"
            android:text="@string/general_product"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtThird"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtSecondInfo"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblThird"
            android:layout_marginStart="3dp"
            android:text="@string/general_brand"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtFourth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtThird"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/lblFifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblFourth"
            android:layout_marginStart="3dp"
            android:text="@string/general_serialnumber"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtFifth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtFourth"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <ProgressBar
            android:id="@+id/usb_memory_progress_bar"
            style="@style/CustomProgressBar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtFifth"
            android:layout_marginLeft="3dp"
            android:layout_marginRight="3dp"
            android:layout_marginTop="3dp"
            android:visibility="gone" />

        <TextView
            android:id="@+id/usb_memory_percent"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_below="@+id/usb_memory_progress_bar"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtSupportedPictureSizes"
            android:layout_width="150dp"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtFourth"
            android:layout_marginEnd="3dp"
            android:duplicateParentState="true"
            android:focusable="true"
            android:focusableInTouchMode="true"
            android:marqueeRepeatLimit="marquee_forever"
            android:scrollbars="vertical"
            android:scrollHorizontally="true"
            android:maxLines="1"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone">

            <requestFocus
                android:duplicateParentState="true"
                android:focusable="true"
                android:focusableInTouchMode="true" />
        </TextView>

        <TextView
            android:id="@+id/lblSixth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblFifth"
            android:layout_marginStart="3dp"
            android:text="@string/general_device_id"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <TextView
            android:id="@+id/txtSixth"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_below="@+id/txtFifth"
            android:layout_marginEnd="3dp"
            android:text="@string/general_unknow"
            style="@style/SystemInfoCustomTextViewStyle"
            android:visibility="gone" />

        <ImageView
            android:id="@+id/imgRestore"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/lblFirstInfo"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="16dp"
            android:contentDescription="@string/image_content_description"
            android:src="@drawable/sys_info_default_img" />

        <TextView
            android:id="@+id/txtConfigClick"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@+id/imgRestore"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="5dp"
            android:text="@string/config_config_click"
            style="@style/SystemInfoCustomTextViewStyle" />

    </RelativeLayout>

</LinearLayout>